refactor: revert the openapi.yaml
The reason for reverting the component specifications to YAML, instead of referencing the JSON files,
is that this approach did not work well with Swagger UI. This issue would also affect the openapi.json if integrated with Swagger UI.
