# apps/kennisbank-api/src/controllers/openapi/index.ts
@@ -1,8 +1,7 @@
 import type { RequestHandler } from 'express';
 import yaml from 'js-yaml';
-import fs from 'node:fs';
 import path from 'node:path';
-import { getTheServerURL } from '../../utils';
+import { getTheServerURL, readFile } from '../../utils';
 
 type Server = {
   url: string;
@@ -12,18 +11,11 @@ type Server = {
 export const openAPIController: RequestHandler = async (req, res, next) => {
   try {
     // eslint-disable-next-line no-undef
-    const openAPIDocument: any = yaml.load(fs.readFileSync(path.join(__dirname, '../../docs/openapi.yaml'), 'utf8'));
-    const openapiComponents = {
-      schemas: {
-        kennisartikel: {
-          $ref: new URL('api/v1/objecttypes/kennisartikel', getTheServerURL(req)),
-        },
-        vac: {
-          $ref: new URL('api/v1/objecttypes/vac', getTheServerURL(req)),
-        },
-      },
-    };
+    const openapiYAML = readFile(path.join(__dirname, '../../docs/openapi.yaml'));
 
+    if (!openapiYAML) throw new Error('openapi.yaml file not found');
+
+    const openAPIDocument: any = yaml.load(openapiYAML);
     const openapiServers = openAPIDocument.servers.map((server: Server) => ({
       url: new URL('api/v1', getTheServerURL(req)),
       description: server.description,
@@ -31,7 +23,7 @@ export const openAPIController: RequestHandler = async (req, res, next) => {
     res.setHeader('Content-Type', 'application/json');
     res.setHeader('Access-Control-Allow-Origin', '*');
     res.status(200);
-    return res.json({ ...openAPIDocument, servers: openapiServers, components: openapiComponents });
+    return res.json({ ...openAPIDocument, servers: openapiServers });
   } catch (error) {
     next(error);
     return null;
